--- a/app/user-service/build.gradle
+++ b/app/user-service/build.gradle
@@ -48,6 +48,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.5'
 
 
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+	implementation 'org.springframework.boot:spring-boot-starter-security:3.1.5'
+
 }
 
 dependencyManagement {
