--- a/app/user-service/src/main/resources/application.yml
+++ b/app/user-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9876
+  port: 0
 
 spring:
   application:
@@ -29,3 +29,10 @@ eureka:
 
 greeting:
   message: Welcome to the Simple E-commerce.
+
+
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
