--- a/app/apigateway-service/src/main/resources/application.yml
+++ b/app/apigateway-service/src/main/resources/application.yml
@@ -21,6 +21,14 @@ spring:
             - Path=/user-service/**
 
 
+        - id: catalog-service
+          uri: lb://CATALOG-SERVICE
+          predicates:
+            - Path=/catalog-service/**
+
+
+
+
         - id: first-service
           uri: lb://MY-FIRST-SERVICE
           predicates:
