--- a/app/apigateway-service/src/main/resources/application.yml
+++ b/app/apigateway-service/src/main/resources/application.yml
@@ -19,6 +19,9 @@ spring:
           uri: lb://USER-SERVICE
           predicates:
             - Path=/user-service/**
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/user-service/(?<segment>.*), /$\{segment}
 
 
         - id: catalog-service
